server/tests/contracts/snapshots/contracts_tests__contracts__ai_contracts__chat_response.snap
---
source: tests/contracts/ai_contracts.rs
assertion_line: 240
expression: response
---
{
  "id": "msg_550e8400-e29b-41d4-a716-446655440001",
  "conversation_id": "conv_550e8400-e29b-41d4-a716-446655440000",
  "message": {
    "role": "assistant",
    "content": "Here's how you can solve that problem..."
  },
  "usage": {
    "prompt": 150,
    "completion": 200,
    "total": 350
  }
}
