server/tests/contracts/snapshots/contracts_tests__contracts__ai_contracts__conversation_with_messages.snap
---
source: tests/contracts/ai_contracts.rs
assertion_line: 191
expression: response
---
{
  "conversation": {
    "id": "conv_550e8400-e29b-41d4-a716-446655440000",
    "title": "Rust Auth Discussion",
    "model": "gpt-4",
    "system_prompt": "You are a helpful assistant.",
    "created_at": "2024-01-15T12:00:00Z",
    "updated_at": "2024-01-15T13:00:00Z",
    "message_count": 3,
    "last_message_at": "2024-01-15T13:00:00Z"
  },
  "messages": [
    {
      "id": "msg_001",
      "role": "system",
      "content": "You are a helpful assistant.",
      "token_count": 6,
      "created_at": "2024-01-15T12:00:00Z"
    },
    {
      "id": "msg_002",
      "role": "user",
      "content": "How do I use JWT in Rust?",
      "token_count": 8,
      "created_at": "2024-01-15T12:00:00Z"
    },
    {
      "id": "msg_003",
      "role": "assistant",
      "content": "You can use the jsonwebtoken crate for JWT in Rust...",
      "token_count": 120,
      "created_at": "2024-01-15T13:00:00Z"
    }
  ]
}
