server/tests/contracts/snapshots/contracts_tests__contracts__ai_contracts__message_output.snap
---
source: tests/contracts/ai_contracts.rs
assertion_line: 276
expression: message
---
{
  "role": "assistant",
  "content": "This is the assistant's response."
}
