server/tests/contracts/snapshots/contracts_tests__contracts__ai_contracts__message_response_user.snap
---
source: tests/contracts/ai_contracts.rs
assertion_line: 120
expression: response
---
{
  "id": "msg_550e8400-e29b-41d4-a716-446655440001",
  "role": "user",
  "content": "How do I implement authentication in Rust?",
  "token_count": 10,
  "created_at": "2024-01-15T12:00:00Z"
}
