server/tests/contracts/snapshots/contracts_tests__contracts__ai_contracts__token_usage.snap
---
source: tests/contracts/ai_contracts.rs
assertion_line: 266
expression: usage
---
{
  "prompt": 100,
  "completion": 250,
  "total": 350
}
