server/tests/contracts/snapshots/contracts_tests__contracts__ai_contracts__usage_stats_response_minimal.snap
---
source: tests/contracts/ai_contracts.rs
assertion_line: 204
expression: response
---
{
  "total_conversations": 0,
  "total_messages": 0,
  "total_tokens": 0,
  "total_cost_cents": null,
  "models_used": []
}
